--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "autoprefixer": "^9.7.1",
+    "axios": "^0.19.0",
     "core-js": "^3.3.2",
+    "dotenv": "^8.2.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vuex": "^3.0.1"
