--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "axios": "^0.19.0",
     "core-js": "^3.3.2",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "serve-static": "^1.14.1",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vuex": "^3.0.1",
