--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "core-js": "^3.3.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "moment": "^2.24.0",
     "serve-static": "^1.14.1",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
+    "vue-sticky-directive": "0.0.10",
     "vuex": "^3.0.1",
     "vuex-persist": "^2.2.0"
   },
