--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.3.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "firebase": "^7.6.2",
     "moment": "^2.24.0",
     "serve-static": "^1.14.1",
     "vue": "^2.6.10",
