--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "moment": "^2.24.0",
     "serve-static": "^1.14.1",
     "vue": "^2.6.10",
+    "vue-paystack": "^2.0.2",
     "vue-router": "^3.1.3",
     "vue-sticky-directive": "0.0.10",
     "vuex": "^3.0.1",
