--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue": "^2.6.10",
     "vue-paystack": "^2.0.2",
     "vue-router": "^3.1.3",
+    "vue-scrollto": "^2.17.1",
     "vue-sticky-directive": "0.0.10",
     "vuex": "^3.0.1",
     "vuex-persist": "^2.2.0"
