--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "vue-paystack": "^2.0.2",
     "vue-router": "^3.1.3",
     "vue-scrollto": "^2.17.1",
+    "vue-share-social": "^0.3.2",
     "vue-sticky-directive": "0.0.10",
+    "vue-twitter": "^0.1.0",
     "vuex": "^3.0.1",
     "vuex-persist": "^2.2.0"
   },
