--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "serve-static": "^1.14.1",
     "v-money": "^0.8.1",
     "vue": "^2.6.10",
+    "vue-check-view": "^0.3.0",
     "vue-clickout": "^1.0.0",
     "vue-paystack": "^2.0.2",
     "vue-router": "^3.1.3",
