--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue": "^2.6.10",
     "vue-check-view": "^0.3.0",
     "vue-clickout": "^1.0.0",
+    "vue-croppa": "^1.3.8",
     "vue-paystack": "^2.0.2",
     "vue-router": "^3.1.3",
     "vue-scrollto": "^2.17.1",
