--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^7.6.2",
     "moment": "^2.24.0",
     "serve-static": "^1.14.1",
+    "stickybits": "^3.7.7",
     "v-money": "^0.8.1",
     "vue": "^2.6.10",
     "vue-check-view": "^0.3.0",
