--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "autoprefixer": "^9.7.1",
     "axios": "^0.19.0",
+    "cloudinary-vue": "^1.1.2",
     "core-js": "^3.3.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
