--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
+  "engines": {
+    "node": "14.15.0",
+    "npm": "6.14.8"
+  },
   "dependencies": {
     "@sentry/browser": "^5.27.4",
     "@sentry/integrations": "^5.27.4",
